name:                structural-isomorphism-plugin
version:             0.0.0.0
synopsis:            GHC plugins using structural isomorphism to map between types
homepage:            
license:             MIT
license-file:        LICENSE
author:              Antal Spector-Zabusky
maintainer:          antal.b.sz@gmail.com
copyright:           Copyright © 2017 Antal Spector-Zabusky, University of Pennsylvania
category:            Language
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/DeepSpec/corespec
  subdir:   core-coq/structural-isomorphism-plugin

library
  exposed-modules:     Plugin.DumpModules
                     , PrintModGuts
                     , CoqCoreBind
                     , GhcPlugins.Util
                     , Text.PrettyPrint.Util
                     , StructuralIsomorphism.TH.Util
                     , StructuralIsomorphism.Util
                     , StructuralIsomorphism.Class
                     , StructuralIsomorphism.Declarations
                     , StructuralIsomorphism.Isomorphizing
                     , StructuralIsomorphism.Generate
                     , Sandbox
  
  build-depends:       base             ==4.9.*
                     , ghc              ==8.0.2
                     , template-haskell ==2.11.*
                     , syb              ==0.6.*
                     , bytestring       ==0.10.*
                     , array            ==0.5.*
                     , containers       ==0.5.*
                     , transformers     ==0.5.*
                     , mtl              ==2.2.*
  
  other-extensions:    NamedFieldPuns
  
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing -O2
